[gd_scene load_steps=4 format=2]

[ext_resource path="res://Managers/MusicHandler.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Music/MusicPacks/Friendly_Fire.tres" type="Resource" id=2]
[ext_resource path="res://TOOLS/MusicPreview.gd" type="Script" id=3]

[node name="Spatial" type="Spatial"]
script = ExtResource( 3 )

[node name="MusicPlayer" parent="." instance=ExtResource( 1 )]
track_to_load = ExtResource( 2 )

[node name="RoundTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 120.0
one_shot = true

[node name="TickTimer" type="Timer" parent="."]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
margin_left = 442.0
margin_top = 237.0
margin_right = 556.0
margin_bottom = 308.0
text = "Round Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Control"]
margin_left = 442.0
margin_top = 336.0
margin_right = 556.0
margin_bottom = 407.0
text = "Outro"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control"]
margin_left = 442.0
margin_top = 155.0
margin_right = 564.0
margin_bottom = 195.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer"]
margin_left = 15.0
margin_top = 13.0
margin_right = 107.0
margin_bottom = 27.0

[node name="Label" type="Label" parent="Control/CenterContainer/HBoxContainer"]
margin_right = 88.0
margin_bottom = 14.0
text = "Current Track:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="val" type="Label" parent="Control/CenterContainer/HBoxContainer"]
margin_left = 92.0
margin_right = 92.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="Control"]
visible = false
margin_left = 442.0
margin_top = 32.7701
margin_right = 564.0
margin_bottom = 72.7701
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer2"]
margin_left = 13.0
margin_top = 13.0
margin_right = 109.0
margin_bottom = 27.0

[node name="Label" type="Label" parent="Control/CenterContainer2/HBoxContainer"]
margin_right = 92.0
margin_bottom = 14.0
text = "ROUND TIME: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="val" type="Label" parent="Control/CenterContainer2/HBoxContainer"]
margin_left = 96.0
margin_right = 96.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="track_set" from="MusicPlayer" to="." method="_on_MusicPlayer_track_set"]
[connection signal="timeout" from="TickTimer" to="." method="_on_TickTimer_timeout"]
[connection signal="pressed" from="Control/Button" to="MusicPlayer" method="round_start"]
[connection signal="pressed" from="Control/Button" to="RoundTimer" method="start"]
[connection signal="pressed" from="Control/Button2" to="MusicPlayer" method="round_ending"]
